# libresource

./: .gitignore  Makefile.am  autogen.sh  configure.ac  git-version.sh  libresource-glib.pc.in  libresource.changes  libresource.pc.in  libresource.spec  libresource.yaml  libresource0-glib.pc.in  libresource0.pc.in
build-aux/: git-version-gen  shave.in
client/: Makefile.am  client.c  time-stat.c  time-stat.h
debian/: changelog  control  libresource-tests.install  libresource0-dev.install  libresource0-glib.install  libresource0.install  resource-client.install  rules
examples/: Makefile.am  fmradio.c
fedora/: Makefile  libresource.spec.in
rpm/: libresource.spec
src/: Makefile.am  dbus-msg.c  dbus-msg.h  dbus-proto.c  dbus-proto.h  dbus.c  dbus.h  internal-msg.c  internal-msg.h  internal-proto.c  internal-proto.h  internal.c  internal.h  res-conn-private.h  res-conn.c  res-conn.h  res-msg.c  res-msg.h  res-proto.c  res-proto.h  res-set-private.h  res-set.c  res-set.h  res-types.h  resmsg.c  resmsg.h  resource-glib-glue.c  resource-glue.h  resource.c  resource.h  resproto.c  resproto.h  resset.c  resset.h  visibility.h
tests/: Makefile.am  memory-leak-test.c  resource-test.c  security-test.c  tests.xml
tests/dbus/: README  dummy-policy-manager.py  org.maemo.resource.manager  policy.conf
